--- a/algo viz/styles.css
+++ b/algo viz/styles.css
@@ -3,12 +3,24 @@ body {
     margin: 0px;
 }
 
+.container {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+.startBTN {
+    position: absolute;
+    left: 47vw;
+}
+
 .main {
     /* background-color: azure  ; */
+    position: absolute;
     border-style: none;
     height: 90vh;
     width: 100vw;
-    margin-top: 10vh;
+    top: 10vh;
 }
 
 .center {
@@ -42,4 +54,8 @@ body {
 
 .path {
     background-color: yellow;
+}
+
+.wall {
+    background-color: black;
 }
