Grid made responsive

--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ a{
     margin: 0px auto;
     padding: 0px;
     height: fit-content;
-    width: 1520px;
+    width: fit-content;
     font-size: 0px;
 }
 
