--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ a{
 
 .center {
     margin: 0px auto;
-    padding: 0px;
+    padding: 0px 10px;
     height: fit-content;
     width: fit-content;
     font-size: 0px;
